--- a/notice/templates/notice/notice_list.html
+++ b/notice/templates/notice/notice_list.html
@@ -14,7 +14,13 @@
 {% include 'blog/navbar.html' %}
 
 <!--    class = table table-bordered, or table tabel-striped, table table-hover -->
+<!-- 공지 리스트 -->
+
+
 <div class="container">
+    <div class="mt-3 my-5">
+        <h4>공지사항 게시판</h4>
+    </div>
     <table class="table table-striped">
         <thead>
         <tr>
@@ -42,19 +48,44 @@
         {% if user.is_superuser %}
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                 <a class="btn btn-outline-dark" href="/notice/create_notice/"><i class="fa-solid fa-square-pen"></i>&nbsp;글쓰기</a>
+
+            </div>
+            <div class="d-flex justify-content-center">
+                <div class="dropdown">
+                    <button class="btn btn-outline-dark dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        제목
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="#">내용</a></li>
+                    </ul>
+                    </div>
+                <form class="d-flex">
+                    <input class="form-control" type="search" placeholder="Search" id="notice-search">
+                    <button class="btn btn-outline-dark" type="button" onclick="searchNotice()">Search</button>
+                </form>
             </div>
         {% endif %}
     {% endif %}
+    
 
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center mb-4">
-            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+    <!--  pagination -->
+    {% if is_paginated %}
+    <nav aria-label="Page navigation example" class="mt-5">
+        <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+        {% else %}
+            <li class="page-item disable"><a class="page-link" href="#">Previous</a></li>
+        {% endif %}
+        {% if  page_obj.has_next %}
+        <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+        {% else %}
+            <li class="page-item disable"><a class="page-link" href="#">Next</a></li>
+        {% endif %}
         </ul>
     </nav>
+    {% endif %}
 </div>
 
 <!--<ul class="pagination justify-content-center mb-4">-->
@@ -94,6 +125,22 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+<!-- search에 있는 내용을 id로 가져오기 trim() : 공백제거-->
+<script>
+    function searchNotice(){
+        let seValue = document.getElementById('notice-search').value.trim();
+        if (seValue.length > 1){
+            location.href="/notice/search/" + seValue + "/";
+        }
+        else{
+            alert('검색어가 너무 짧습니다.');
+        }
+    };
+    document.getElementById('notice-search').addEventListener('keyup', function(event){
+        if(event.key === 'Enter'){
+            searchNotice();
+        }
+    });
+</script>
 </body>
 </html>
-
